<resources>
    <string name="app_name">LazarParent</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">tdmZYblELna1qEfzXCbWVPkLT6meo8rGBeS6hqFe</string>
    <string name="back4app_client_key">oAGBmjTOx2Tqn7t74yloKghIX5Y7hTyTejfm89Sf</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="password">Enter Password</string>
    <string name="ID">Enter M_ID or Aadhar Number</string>
    <string name="Aadhar">Enter Aadhar Number</string>
    <string name="MID">Enter M_ID</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="tosignup">First Time Login? Register</string>
    <string name="title_activity_detail_display">DetailDisplayActivity</string>
    <string name="children">Children Data</string>
    <string name="lastvaccine">Last Vacinnation Done</string>
    <string name="MotherID">Mother ID</string>
    <string name="lastvaccinename">Last vaccination name</string>
    <string name="vacinedate">Current Vacination Due</string>
    <string name="vacinename">Vaccination Name</string>
    <string name="childage">Child\'s Age</string>
    <string name="childname">Name</string>
    <string name="name">Name</string>
</resources>
